# MauriMesh

./: .easignore  .gitattributes  .gitignore  .npmrc  .replit  .replit-ai-rules.md  .replitignore  AGENTS.md  AUDIT_REPORT.md  MAURIMESH_EXPO_DOCTOR_DLX.txt  MAURIMESH_EXPO_DOCTOR_NOW.txt  MAURIMESH_EXPO_EXPORT_AFTER_FIX.txt  MAURIMESH_FINAL_INVENTIONS_UI_COMPLETION.md  MAURIMESH_SELF_EFFICIENT_SYSTEM_COMPLETE.md  MAURIMESH_UI_ENGINE_WIRING_REPORT.md  README.md  activate-maurimesh-living-runtime.sh  add-2-hop-stage-notifications.sh  add-api-fallback-simulation-layer-no-eas.sh  add-safe-dashboard-layer-no-eas.sh  add-safe-index-route-no-build.sh  add-safe-ui-shell-layer-no-eas.sh  app.json  build-apk.sh  chat-routing-inspection.txt  check-mainapplication-kotlin-syntax-shape.sh  check-maurimesh-ai-pixel-reconstruction.sh  check-maurimesh-android-kotlin-telemetry.sh  check-maurimesh-backup-intelligence.sh  check-maurimesh-device-hardware.sh  check-maurimesh-evolution-layer.sh  check-maurimesh-final-ui-complete.sh  check-maurimesh-full-mesh-test-report.sh  check-maurimesh-hardware-runtime-controller.sh  check-maurimesh-intelligence.sh  check-maurimesh-jumpcode-apk-readiness.sh  check-maurimesh-mainapplication-telemetry-fix.sh  check-maurimesh-maori-protocol-fallback.sh  check-maurimesh-message-ack-fallback.sh  check-maurimesh-native-telemetry.sh  (+180 more)
.agents/: agent_assets_metadata.toml
.migration-backup/: package-lock.json  (+1 more)
rust/maurimesh-core/: Cargo.toml
rust/maurimesh-core/src/: ack.rs  ffi.rs  hash.rs  lib.rs  main.rs  packet.rs  queue.rs  route.rs  simulation.rs  types.rs
(+1261 files in other folders)
